EDA and cleaning datasets

--- a/notebooks/00_data_split.ipynb
+++ b/notebooks/00_data_split.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1c97a9c9",
    "metadata": {},
    "outputs": [],
@@ -12,18 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7e6fc139",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_day = pd.read_csv(r\"C:\\Users\\obouk\\PycharmProjects\\Bike_Sharing\\data\\original_data\\day.csv\")\n",
-    "data_hour = pd.read_csv(r\"C:\\Users\\obouk\\PycharmProjects\\Bike_Sharing\\data\\original_data\\hour.csv\")"
+    "data_day = pd.read_csv(r\"D:\\VS Code Projects\\Datasets\\Bike Sharing\\day.csv\")\n",
+    "data_hour = pd.read_csv(r\"D:\\VS Code Projects\\Datasets\\Bike Sharing\\hour.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "002753cb",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "(731, 16)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "8fda7733",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
        "(17379, 17)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "89e25800",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,7 @@
        "4           1  0.24  0.2879  0.75        0.0       0           1    1  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "7483eb32",
    "metadata": {},
    "outputs": [
@@ -286,99 +286,99 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>66</th>\n",
-       "      <td>67</td>\n",
-       "      <td>2011-03-08</td>\n",
+       "      <th>41</th>\n",
+       "      <td>42</td>\n",
+       "      <td>2011-02-11</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.189091</td>\n",
+       "      <td>0.213509</td>\n",
+       "      <td>0.506364</td>\n",
+       "      <td>0.108550</td>\n",
+       "      <td>149</td>\n",
+       "      <td>1597</td>\n",
+       "      <td>1746</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>100</td>\n",
+       "      <td>2011-04-10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.426667</td>\n",
+       "      <td>0.426737</td>\n",
+       "      <td>0.857500</td>\n",
+       "      <td>0.146767</td>\n",
+       "      <td>1188</td>\n",
+       "      <td>1707</td>\n",
+       "      <td>2895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>416</th>\n",
+       "      <td>417</td>\n",
+       "      <td>2012-02-21</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.292500</td>\n",
-       "      <td>0.302400</td>\n",
-       "      <td>0.420833</td>\n",
-       "      <td>0.120650</td>\n",
-       "      <td>316</td>\n",
-       "      <td>1817</td>\n",
-       "      <td>2133</td>\n",
+       "      <td>0.287826</td>\n",
+       "      <td>0.295113</td>\n",
+       "      <td>0.594348</td>\n",
+       "      <td>0.205717</td>\n",
+       "      <td>163</td>\n",
+       "      <td>3614</td>\n",
+       "      <td>3777</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>214</th>\n",
-       "      <td>215</td>\n",
-       "      <td>2011-08-03</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.731667</td>\n",
-       "      <td>0.679937</td>\n",
-       "      <td>0.657500</td>\n",
-       "      <td>0.135583</td>\n",
-       "      <td>467</td>\n",
-       "      <td>3107</td>\n",
-       "      <td>3574</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>679</th>\n",
-       "      <td>680</td>\n",
-       "      <td>2012-11-10</td>\n",
+       "      <th>635</th>\n",
+       "      <td>636</td>\n",
+       "      <td>2012-09-27</td>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.389167</td>\n",
-       "      <td>0.393937</td>\n",
-       "      <td>0.645417</td>\n",
-       "      <td>0.057846</td>\n",
-       "      <td>2090</td>\n",
-       "      <td>4446</td>\n",
-       "      <td>6536</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>266</th>\n",
-       "      <td>267</td>\n",
-       "      <td>2011-09-24</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
        "      <td>9</td>\n",
        "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.606667</td>\n",
-       "      <td>0.564412</td>\n",
-       "      <td>0.862500</td>\n",
-       "      <td>0.078383</td>\n",
-       "      <td>1776</td>\n",
-       "      <td>3647</td>\n",
-       "      <td>5423</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>680</th>\n",
-       "      <td>681</td>\n",
-       "      <td>2012-11-11</td>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.650000</td>\n",
+       "      <td>0.607975</td>\n",
+       "      <td>0.690833</td>\n",
+       "      <td>0.134342</td>\n",
+       "      <td>751</td>\n",
+       "      <td>6642</td>\n",
+       "      <td>7393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>509</th>\n",
+       "      <td>510</td>\n",
+       "      <td>2012-05-24</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.420833</td>\n",
-       "      <td>0.421713</td>\n",
-       "      <td>0.659167</td>\n",
-       "      <td>0.127500</td>\n",
-       "      <td>2290</td>\n",
-       "      <td>4562</td>\n",
-       "      <td>6852</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.655000</td>\n",
+       "      <td>0.606700</td>\n",
+       "      <td>0.716667</td>\n",
+       "      <td>0.172896</td>\n",
+       "      <td>1059</td>\n",
+       "      <td>5711</td>\n",
+       "      <td>6770</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -386,28 +386,28 @@
       ],
       "text/plain": [
        "     instant      dteday  season  yr  mnth  holiday  weekday  workingday  \\\n",
-       "66        67  2011-03-08       1   0     3        0        2           1   \n",
-       "214      215  2011-08-03       3   0     8        0        3           1   \n",
-       "679      680  2012-11-10       4   1    11        0        6           0   \n",
-       "266      267  2011-09-24       4   0     9        0        6           0   \n",
-       "680      681  2012-11-11       4   1    11        0        0           0   \n",
+       "41        42  2011-02-11       1   0     2        0        5           1   \n",
+       "99       100  2011-04-10       2   0     4        0        0           0   \n",
+       "416      417  2012-02-21       1   1     2        0        2           1   \n",
+       "635      636  2012-09-27       4   1     9        0        4           1   \n",
+       "509      510  2012-05-24       2   1     5        0        4           1   \n",
        "\n",
        "     weathersit      temp     atemp       hum  windspeed  casual  registered  \\\n",
-       "66            1  0.292500  0.302400  0.420833   0.120650     316        1817   \n",
-       "214           2  0.731667  0.679937  0.657500   0.135583     467        3107   \n",
-       "679           1  0.389167  0.393937  0.645417   0.057846    2090        4446   \n",
-       "266           2  0.606667  0.564412  0.862500   0.078383    1776        3647   \n",
-       "680           1  0.420833  0.421713  0.659167   0.127500    2290        4562   \n",
+       "41            1  0.189091  0.213509  0.506364   0.108550     149        1597   \n",
+       "99            2  0.426667  0.426737  0.857500   0.146767    1188        1707   \n",
+       "416           1  0.287826  0.295113  0.594348   0.205717     163        3614   \n",
+       "635           2  0.650000  0.607975  0.690833   0.134342     751        6642   \n",
+       "509           1  0.655000  0.606700  0.716667   0.172896    1059        5711   \n",
        "\n",
        "      cnt  \n",
-       "66   2133  \n",
-       "214  3574  \n",
-       "679  6536  \n",
-       "266  5423  \n",
-       "680  6852  "
+       "41   1746  \n",
+       "99   2895  \n",
+       "416  3777  \n",
+       "635  7393  \n",
+       "509  6770  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "40698464",
    "metadata": {},
    "outputs": [
@@ -428,18 +428,19 @@
        "dtype('O')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Checking Dates data type day dataset\n",
     "data_day.dtypes['dteday'] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "1ee76a44",
    "metadata": {},
    "outputs": [
@@ -449,29 +450,31 @@
        "dtype('O')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Checking Dates data type for hour dataset\n",
     "data_hour.dtypes['dteday'] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "b09afc3d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Changing \"Date\" column type to datetime\n",
     "data_hour['dteday'] = pd.to_datetime(data_hour['dteday'])\n",
     "data_day['dteday'] = pd.to_datetime(data_day['dteday'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "f722b249",
    "metadata": {},
    "outputs": [
@@ -481,7 +484,7 @@
        "dtype('<M8[ns]')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "c431f5d1",
    "metadata": {},
    "outputs": [
@@ -514,54 +517,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b338b0db",
+   "metadata": {},
+   "source": [
+    "#### Avoid Data Leakage\n",
+    "##### To prevent information leakage between training and evaluation:\n",
+    "- **Training set:** All records from the year 2011  \n",
+    "- **Evaluation set (validation):** First three quarters of 2012  \n",
+    "- **Holdout set (test set):** Last quarter of 2012\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "39f841fe",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Sort by date (important to avoid shuffling issues)\n",
     "data_day =data_day.sort_values(by = 'dteday')\n",
     "data_hour = data_hour.sort_values(by = 'dteday')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "9392a1c9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define cutoff dates\n",
     "cutoff_date = '2012-01-01'\n",
     "holdout_day =  '2012-10-01'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "id": "a255e525",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Train: before 2012\n",
     "train_data_day = data_day[data_day['dteday']< cutoff_date]\n",
+    "#valid: before Q4 /2012\n",
     "valid_data_day = data_day[(data_day['dteday']>= cutoff_date) & (data_day['dteday']< holdout_day)]\n",
+    "# Test: after Q3 2012\n",
     "holdout_data_day = data_day[data_day['dteday']>= holdout_day]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "id": "d91aae52",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Train: before 2012\n",
     "train_data_hour = data_hour[data_hour['dteday']< cutoff_date]\n",
+    "#valid: before Q4 /2012\n",
     "valid_data_hour = data_hour[(data_hour['dteday']>= cutoff_date) & (data_hour['dteday']< holdout_day)]\n",
+    "#test: after Q3 /2012\n",
     "holdout_data_hour = data_hour[data_hour['dteday']>= holdout_day]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "id": "1d2c024e",
    "metadata": {},
    "outputs": [
@@ -726,7 +749,7 @@
        "15229           3  0.56  0.5303  0.64     0.1045      42         571  613  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "id": "7856a296",
    "metadata": {},
    "outputs": [
@@ -747,7 +770,7 @@
        "(274, 16)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "id": "52aebb30",
    "metadata": {},
    "outputs": [
@@ -768,7 +791,7 @@
        "(365, 16)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "id": "bf1e12f9",
    "metadata": {},
    "outputs": [
@@ -789,7 +812,7 @@
        "(8645, 17)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,26 +823,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "id": "96327dec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data_hour.to_csv(r'C:\\Users\\obouk\\PycharmProjects\\Bike_Sharing\\data\\data_splitted\\train_hour.csv', index =False)\n",
-    "valid_data_hour.to_csv(r'C:\\Users\\obouk\\PycharmProjects\\Bike_Sharing\\data\\data_splitted\\valid_hour.csv', index = False)\n",
-    "holdout_data_hour.to_csv(r'C:\\Users\\obouk\\PycharmProjects\\Bike_Sharing\\data\\data_splitted\\holdout_hour.csv', index = False)\n",
-    "train_data_day.to_csv(r'C:\\Users\\obouk\\PycharmProjects\\Bike_Sharing\\data\\data_splitted\\train_day.csv', index = False)\n",
-    "valid_data_day.to_csv(r'C:\\Users\\obouk\\PycharmProjects\\Bike_Sharing\\data\\data_splitted\\valid_day.csv', index = False)\n",
-    "holdout_data_day.to_csv(r'C:\\Users\\obouk\\PycharmProjects\\Bike_Sharing\\data\\data_splitted\\holdout_day.csv', index = False)"
+    "# Save dataset splits\n",
+    "train_data_hour.to_csv(r'D:\\VS Code Projects\\Datasets\\Bike Sharing\\data_splitted\\valid_hour.csv', index = False)\n",
+    "holdout_data_hour.to_csv(r'D:\\VS Code Projects\\Datasets\\Bike Sharing\\data_splitted\\holdout_hour.csv', index = False)\n",
+    "train_data_day.to_csv(r'D:\\VS Code Projects\\Datasets\\Bike Sharing\\data_splitted\\train_day.csv', index = False)\n",
+    "valid_data_day.to_csv(r'D:\\VS Code Projects\\Datasets\\Bike Sharing\\data_splitted\\valid_day.csv', index = False)\n",
+    "holdout_data_day.to_csv(r'D:\\VS Code Projects\\Datasets\\Bike Sharing\\data_splitted\\holdout_day.csv', index = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b30a843",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -838,7 +853,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
