feature engineering part done

--- a/notebooks/00_data_split.ipynb
+++ b/notebooks/00_data_split.ipynb
@@ -17,8 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_day = pd.read_csv(r\"D:\\VS Code Projects\\Datasets\\Bike Sharing\\day.csv\")\n",
-    "data_hour = pd.read_csv(r\"D:\\VS Code Projects\\Datasets\\Bike Sharing\\hour.csv\")"
+    "data_day = pd.read_csv(r\"D:\\VS Code Projects\\Datasets\\Bike Sharing\\data_raw\\day.csv\")\n",
+    "data_hour = pd.read_csv(r\"D:\\VS Code Projects\\Datasets\\Bike Sharing\\data_raw\\hour.csv\")"
    ]
   },
   {
@@ -286,99 +286,99 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>370</th>\n",
-       "      <td>371</td>\n",
-       "      <td>2012-01-06</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.334167</td>\n",
-       "      <td>0.340267</td>\n",
-       "      <td>0.542083</td>\n",
-       "      <td>0.167908</td>\n",
-       "      <td>307</td>\n",
-       "      <td>3791</td>\n",
-       "      <td>4098</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>468</th>\n",
-       "      <td>469</td>\n",
-       "      <td>2012-04-13</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.442500</td>\n",
-       "      <td>0.431808</td>\n",
-       "      <td>0.408333</td>\n",
-       "      <td>0.155471</td>\n",
-       "      <td>1252</td>\n",
-       "      <td>5146</td>\n",
-       "      <td>6398</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>349</th>\n",
-       "      <td>350</td>\n",
-       "      <td>2011-12-16</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.375000</td>\n",
-       "      <td>0.359825</td>\n",
-       "      <td>0.500417</td>\n",
-       "      <td>0.260575</td>\n",
-       "      <td>178</td>\n",
-       "      <td>3399</td>\n",
-       "      <td>3577</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>280</th>\n",
-       "      <td>281</td>\n",
-       "      <td>2011-10-08</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.521667</td>\n",
-       "      <td>0.513242</td>\n",
-       "      <td>0.701250</td>\n",
-       "      <td>0.045404</td>\n",
-       "      <td>2235</td>\n",
-       "      <td>3174</td>\n",
-       "      <td>5409</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>624</th>\n",
-       "      <td>625</td>\n",
-       "      <td>2012-09-16</td>\n",
+       "      <th>183</th>\n",
+       "      <td>184</td>\n",
+       "      <td>2011-07-03</td>\n",
        "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.716667</td>\n",
+       "      <td>0.668575</td>\n",
+       "      <td>0.682500</td>\n",
+       "      <td>0.228858</td>\n",
+       "      <td>2282</td>\n",
+       "      <td>2367</td>\n",
+       "      <td>4649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>46</td>\n",
+       "      <td>2011-02-15</td>\n",
        "      <td>1</td>\n",
-       "      <td>9</td>\n",
        "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.580000</td>\n",
-       "      <td>0.563125</td>\n",
-       "      <td>0.570000</td>\n",
-       "      <td>0.090183</td>\n",
-       "      <td>2166</td>\n",
-       "      <td>5167</td>\n",
-       "      <td>7333</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.266087</td>\n",
+       "      <td>0.254274</td>\n",
+       "      <td>0.314348</td>\n",
+       "      <td>0.291374</td>\n",
+       "      <td>140</td>\n",
+       "      <td>1675</td>\n",
+       "      <td>1815</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>409</th>\n",
+       "      <td>410</td>\n",
+       "      <td>2012-02-14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.319167</td>\n",
+       "      <td>0.333946</td>\n",
+       "      <td>0.508750</td>\n",
+       "      <td>0.141179</td>\n",
+       "      <td>135</td>\n",
+       "      <td>3787</td>\n",
+       "      <td>3922</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>369</th>\n",
+       "      <td>370</td>\n",
+       "      <td>2012-01-05</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.265833</td>\n",
+       "      <td>0.278412</td>\n",
+       "      <td>0.524167</td>\n",
+       "      <td>0.129987</td>\n",
+       "      <td>140</td>\n",
+       "      <td>3132</td>\n",
+       "      <td>3272</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398</th>\n",
+       "      <td>399</td>\n",
+       "      <td>2012-02-03</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.313333</td>\n",
+       "      <td>0.309346</td>\n",
+       "      <td>0.526667</td>\n",
+       "      <td>0.178496</td>\n",
+       "      <td>310</td>\n",
+       "      <td>3841</td>\n",
+       "      <td>4151</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -386,25 +386,25 @@
       ],
       "text/plain": [
        "     instant      dteday  season  yr  mnth  holiday  weekday  workingday  \\\n",
-       "370      371  2012-01-06       1   1     1        0        5           1   \n",
-       "468      469  2012-04-13       2   1     4        0        5           1   \n",
-       "349      350  2011-12-16       4   0    12        0        5           1   \n",
-       "280      281  2011-10-08       4   0    10        0        6           0   \n",
-       "624      625  2012-09-16       3   1     9        0        0           0   \n",
+       "183      184  2011-07-03       3   0     7        0        0           0   \n",
+       "45        46  2011-02-15       1   0     2        0        2           1   \n",
+       "409      410  2012-02-14       1   1     2        0        2           1   \n",
+       "369      370  2012-01-05       1   1     1        0        4           1   \n",
+       "398      399  2012-02-03       1   1     2        0        5           1   \n",
        "\n",
        "     weathersit      temp     atemp       hum  windspeed  casual  registered  \\\n",
-       "370           1  0.334167  0.340267  0.542083   0.167908     307        3791   \n",
-       "468           1  0.442500  0.431808  0.408333   0.155471    1252        5146   \n",
-       "349           2  0.375000  0.359825  0.500417   0.260575     178        3399   \n",
-       "280           1  0.521667  0.513242  0.701250   0.045404    2235        3174   \n",
-       "624           1  0.580000  0.563125  0.570000   0.090183    2166        5167   \n",
+       "183           2  0.716667  0.668575  0.682500   0.228858    2282        2367   \n",
+       "45            1  0.266087  0.254274  0.314348   0.291374     140        1675   \n",
+       "409           2  0.319167  0.333946  0.508750   0.141179     135        3787   \n",
+       "369           1  0.265833  0.278412  0.524167   0.129987     140        3132   \n",
+       "398           1  0.313333  0.309346  0.526667   0.178496     310        3841   \n",
        "\n",
        "      cnt  \n",
-       "370  4098  \n",
-       "468  6398  \n",
-       "349  3577  \n",
-       "280  5409  \n",
-       "624  7333  "
+       "183  4649  \n",
+       "45   1815  \n",
+       "409  3922  \n",
+       "369  3272  \n",
+       "398  4151  "
       ]
      },
      "execution_count": 6,
@@ -1417,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "858cd572",
    "metadata": {},
    "outputs": [
@@ -1444,7 +1444,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1455,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "4861793c",
    "metadata": {},
    "outputs": [
@@ -1481,7 +1481,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "ee2d0949",
    "metadata": {},
    "outputs": [
@@ -2075,7 +2075,7 @@
        "23           2  0.46  0.4545  0.88     0.2985      15          24   39  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2086,7 +2086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "96327dec",
    "metadata": {},
    "outputs": [],
